--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>Hello, I am Shawn Olichwier!</h1>
+				<p>I am a Data Science student at the University of Houston-Downtown.
+					  My research interests include Reinforcement Learning, Computer Vision, and
+					  Data Visualization. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
