--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     		<div class="blurb">
         		<h1>Hello, I am Shawn Olichwier!</h1>
 				<p>I am a Data Science student at the University of Houston-Downtown.
-					  My research interests include Reinforcement Learning, Computer Vision, and
-					  Data Visualization. <a href="/about">Read more about my life...</a></p>
+					  My research interests include Reinforcement Learning, Computer Vision, Natural
+					  Processing Language and Data Visualization.
+					  <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
