--- a/index.html
+++ b/index.html
@@ -1,33 +1,13 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Shawn Olichwier, Data Scientist</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hello, I am Shawn Olichwier!</h1>
-				<p>I am a Data Science student at the University of Houston-Downtown.
-					  My research interests include Reinforcement Learning, Computer Vision, Natural
-					  Processing Language and Data Visualization.
-					  <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:shawnolich@gmail.com">email</a></li>
-        		<li><a href="https://github.com/shawnmolichwier">github.com/shawnmolichwier</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Shawn Olichwier, Data Scientist
+
+---<div class="blurb">
+	<h1>Hello, I am Shawn Olichwier.</h1>
+	<p>I am a Data Science student at the University of Houston-Downtown.
+		My areas of interest include Reinforcement Learning, Computer Vision, Natural
+		Processing Language, Data Visualization and Chess.
+		<a href="/about">Read more about me here...</a></p>
+</div><!-- /.blurb -->
+
+
